# audittrail-compliance-as-code

./: .gitignore  AGENTS.md  CONTRIBUTING.md  build_exe.ps1  run-all.bat  run-demo.bat
.github/workflows/: ci.yml
audittrail/demo/: benchmark.py  dashboard.py  fraud_detection_demo.py  generate_pitch_chart.py  pdf_exporter.py  server.py
audittrail/sdk-python/: README.md  pyproject.toml
audittrail/sdk-python/audittrail/: __init__.py  cli.py  compliance.py  tracer.py
audittrail/sdk-python/audittrail/exporters/: json_exporter.py
audittrail/sdk-python/audittrail/utils/: integrity.py
audittrail/sdk-python/tests/: test_compliance.py  test_integrity.py  test_tracer.py
samples/: sample_audit_log.jsonl  sample_compliance_report.json
