[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audittrail"
version = "0.1.0"
description = "Compliance-as-Code SDK for EU AI Act"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
demo = ["scikit-learn>=1.0"]
exe = ["pyinstaller>=6.0"]

[project.scripts]
audittrail-cli = "audittrail.cli:main"

[tool.setuptools]
packages = ["audittrail", "audittrail.exporters", "audittrail.utils"]

[tool.setuptools.package-data]
audittrail = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
