[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audittrail"
version = "0.1.0"
description = "Compliance-as-Code SDK for EU AI Act"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
demo = ["scikit-learn>=1.0"]
exe = ["pyinstaller>=6.0"]
cloud = ["boto3>=1.26", "azure-storage-blob>=12.19"]
dashboard = ["streamlit>=1.24", "pandas>=1.5"]
pdf = ["reportlab>=3.6"]

[project.scripts]
audittrail-cli = "audittrail.cli:main"

[tool.setuptools]
packages = ["audittrail", "audittrail.exporters", "audittrail.utils"]

[tool.setuptools.package-data]
audittrail = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
